--- a/src/VirtoCommerce.CatalogModule.Data/VirtoCommerce.CatalogModule.Data.csproj
+++ b/src/VirtoCommerce.CatalogModule.Data/VirtoCommerce.CatalogModule.Data.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -17,12 +17,13 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
         <PackageReference Include="VirtoCommerce.CoreModule.Core" Version="3.0.0-beta.2" />
         <PackageReference Include="VirtoCommerce.ExportModule.Data" Version="3.0.0-beta.1" />
-        <PackageReference Include="VirtoCommerce.Platform.Core" Version="3.0.0-beta0001" />
+        <!--<PackageReference Include="VirtoCommerce.Platform.Core" Version="3.0.0-beta0001" />-->
         <PackageReference Include="VirtoCommerce.Platform.Data" Version="3.0.0-beta0001" />
         <PackageReference Include="VirtoCommerce.StoreModule.Core" Version="3.0.0-beta.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\..\vc-platform-core\src\VirtoCommerce.Platform.Core\VirtoCommerce.Platform.Core.csproj" />
       <ProjectReference Include="..\VirtoCommerce.CatalogModule.Core\VirtoCommerce.CatalogModule.Core.csproj" />
     </ItemGroup>
 
