--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,13 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'sylvain-combe-sonarsource'
+    scannerMode: 'MSBuild'
+    projectKey: 'vc-module-catalog'
+    projectName: 'vc-module-catalog'
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
@@ -32,3 +39,9 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: SonarCloudAnalyze@1
+
+- task: SonarCloudPublish@1
+  inputs:
+    pollingTimeoutSec: '300'
