--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     SonarCloud: 'SonarCloud'
     organization: 'sylvain-combe-sonarsource'
     scannerMode: 'MSBuild'
-    projectKey: 'vc-module-catalog'
+    projectKey: 'sylvain-combe-sonarsource_vc-module-catalog'
     projectName: 'vc-module-catalog'
 - task: VSBuild@1
   inputs:
